--- a/brownie/brownie-config.yaml
+++ b/brownie/brownie-config.yaml
@@ -4,4 +4,6 @@ compiler:
   solc:
     remappings:
       - '@openzeppelin=OpenZeppelin/openzeppelin-contracts@3.4.0'
+wallets:
+  from_key: ${PRIVATE_KEY}
 dotenv: .env 
